llvm/test/tools/llubi/lib_read_nullary_string.ll
; NOTE: Assertions have been autogenerated by utils/update_llubi_test_checks.py UTC_ARGS: --version 6
; RUN: not llubi --verbose < %s 2>&1 | FileCheck %s

declare i32 @puts(ptr)

define i32 @main() {
  %puts.str = inttoptr i64 0 to ptr

  %1 = call i32 @puts(ptr %puts.str)

  ret i32 0
}
; CHECK: Entering function: main
; CHECK-NEXT:   %puts.str = inttoptr i64 0 to ptr => ptr 0x0 [dangling]
; CHECK-NEXT: Immediate UB detected: Invalid memory access via a pointer with nullary provenance.
; CHECK-NEXT: error: Execution of function 'main' failed.
